# redis-6.0.5-test

./: .gitignore  CMakeLists.txt
conf/sentinel/: sentinel-1.conf  sentinel-2.conf
conf/slave/: redis-1.conf  redis-2.conf  redis-3.conf
src/: CMakeLists.txt  ae_kqueue.c  dict.c  pubsub.c  rdb.c  replication.c  sentinel.c  server-test.c  server.c  t_zset.c
test/: CMakeLists.txt  dict_test.c  dict_test.h  fork_test.c  skip_test.c  skip_test.h  socket_test.c
